--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,4 +90,5 @@ jobs:
         run: bash <(curl -s https://codecov.io/bash)
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
-
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
