--- a/crane4j-spring-boot-starter/pom.xml
+++ b/crane4j-spring-boot-starter/pom.xml
@@ -69,6 +69,19 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- jpa extension -->
+        <dependency>
+            <groupId>cn.crane4j</groupId>
+            <artifactId>crane4j-extension-jpa</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
         <!--test-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
